--- a/sg-pedidos/src/style.css
+++ b/sg-pedidos/src/style.css
@@ -22,12 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body, #app {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
+}
+
+body {
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -59,10 +63,10 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: light) {
